# Casino

./: README.md  TODO_COMPLETION_GUIDE.md  dockerfile  pyproject.toml  pyvenv.cfg  requirements.txt
src/: casino.py  goose.py  log_calls.py  main.py  player.py
src/collections/: casino_balance.py  chip_collection.py  goose_collection.py  goose_ledger.py  player_collection.py
src/entities/: chip.py  goose.py  player.py
src/simulation/: casino.py  run_simulation.py  set_collections.py
tests/: test_casino.py  test_casino_balance.py  test_chip.py  test_chip_collection.py  test_goose.py  test_goose_collection.py  test_player.py  test_player_collection.py
